[project]
name = "xai-gradio"
version = "0.1.0"
description = "Xircuits component library for Gradio."
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-gradio"
keywords = ["xircuits","gradio","ML interfaces"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/DataCollectionInterface.xircuits"
requirements_path = "requirements.txt"
